[package]
name = "juniper_rocket_async"
version = "0.5.1"
edition = "2018"
authors = [
    "Magnus Hallin <mhallin@fastmail.com>",
    "Christoph Herzog <chris@theduke.at>",
]
description = "Juniper GraphQL integration with Rocket"
license = "BSD-2-Clause"
documentation = "https://docs.rs/juniper_rocket"
repository = "https://github.com/graphql-rust/juniper"

[dependencies]
futures = "0.3.1"
juniper = { version = "0.15.3", path = "../juniper", default-features = false }
#before from form
#rocket = {git = "https://github.com/SergioBenitez/Rocket", rev = "2366bff05fe435977106106b918bb7e5a1d057df", default-features = false}
#new form
#rocket = {git = "https://github.com/SergioBenitez/Rocket", rev = "63a14525d86595a8033715e3bdcd2bf2581eecb1", default-features = false}
rocket = {git = "https://github.com/SergioBenitez/Rocket", branch = "master", default-features = false}
serde_json = "1.0.2"
tokio = { version = "0.2", features = ["macros", "rt-core"] }

[dev-dependencies]
juniper = { version = "0.15.3", path = "../juniper", features = ["expose-test-schema"] }

